--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <header class="vh-100" id="foto">
             <div class="position-absolute top-50 start-50 translate-middle w-50">
                 <p class="fs-4 text-white">
-                    ¡Hola! Soy Gabriela Vallejos, estudiante de último año de Diseño en la UC. Mi aproximación al Diseño está enfocada en User-Experience a través del Diseño de Servicio, Diseño de Productos y el Diseño de Sistemas. Haz click <a href="#lasEspecialidades" class="link-light">aquí para ver mis especialidades</a>.
+                    ¡Hola! Soy Gabriela Vallejos, estudiante de último año de Diseño en la UC. Mi aproximación al Diseño está enfocada en el uso de herramientas de codiseño y el user-experience. Mis especialidades son el <a href="#lasEspecialidades" class="link-light">Diseño de Sistemas, Diseño de Servicio y Diseño de Productos.</a>.
                 </p>
             </div>
         </header>
