--- a/single.html
+++ b/single.html
@@ -9,9 +9,10 @@
         <style>
             nav {
                 backdrop-filter: blur(0.5rem);
+                background-color: #333;
             }
             footer {
-                background: #A67788;
+                background: #000000;
             }
         </style>
         <title>GABRIELA VALLEJOS</title>
@@ -20,16 +21,16 @@
         <!--Barra de navegación fija al tope, noten cambios en el href-->
         <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">GABRIELA VALLEJOS</a>
+                <a class="navbar-brand text-white" href="index.html">GABRIELA VALLEJOS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarMenu">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html#lasEspecialidades">Especialidades</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#losTrabajos">Trabajos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#lasOpiniones">Opiniones</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#losContactos">Contactos</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="index.html#lasEspecialidades">Especialidades</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="index.html#losTrabajos">Trabajos</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="index.html#lasOpiniones">Opiniones</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="index.html#losContactos">Contactos</a></li>
                     </ul>
                 </div>
             </div>
